<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="av39079.android.fer.hr.HostActivity"
    android:weightSum="1">

    <TextView
            android:text="@string/add_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/etFirstVariable"
            android:layout_width="200dp"
            android:inputType="numberSigned"
            android:digits="0123456789-"
            android:hint="@string/enter_first_variable"
            android:layout_height="wrap_content"/>

    <EditText android:layout_width="200dp"
              android:id="@+id/etSecondVariable"
              android:inputType="numberSigned"
              android:digits="0123456789-"
              android:hint="@string/enter_second_variable"
              android:layout_height="wrap_content"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/operations"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:checked="true" />
        <RadioButton android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"/>
        <RadioButton android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"/>
        <RadioButton android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"/>
    </RadioGroup>

    <TextView android:id="@+id/tvSum"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

    <TextView android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/btnCalculate"
            android:layout_width="200dp"
            android:text="@string/calculate"
            android:layout_height="wrap_content"/>

    <Button android:layout_width="200dp"
            android:text="@string/call"
            android:id="@+id/btnCall"
            android:layout_height="wrap_content"/>

    <Button android:layout_width="200dp"
            android:id="@+id/btnView"
            android:text="@string/open"
            android:layout_height="wrap_content"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button android:layout_width="200dp"
            android:id="@+id/btnSend"
            android:text="@string/send"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
